--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "react": "^17.0.2",
     "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react-hook-form": "^7.27.1",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "v6": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
